# image-label-assistant

./: .gitignore  README.md  config.py  image_labeler.py  main.py  pyproject.toml  requirements.txt  style.qss  utils.py
models/: .gitignore
windows/: image_dialog.py  model_config_dialog.py
