[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-label-assistant"
version = "0.1.0"
description = "A tool for image labeling, designed for training Lora models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "PyQt5>=5.15.4",
    "Pillow>=9.0.0",
    "requests>=2.25.0",
    "google-generativeai>=0.8.0",
    "transformers>=4.38.0",
    "einops>=0.6.0",
    "timm>=0.9.0",
    "huggingface_hub>=0.20.0",
    "zhipuai>=2.0.0",
]

[tool.setuptools]
py-modules = ["main", "image_labeler", "utils", "config"]